第二次修改提交

--- a/test.html
+++ b/test.html
@@ -1,17 +1,16 @@
-
-	//js代码写在这个下面
-	</script>
-	<h1>这是第一个页面</h1>
-	<script>
-/* css样式代码可以写在这个下面 */
 <!doctype html>
-</body>
-</head>
-</html>
-</style>
-<body>
-<head>
 <html>
-<meta charset="utf8">
-<style>
-<title>练习</title>
+	<head>
+		<meta charset="utf8">
+		<title>练习</title>
+		<style>
+			/*css样式写在下面*/
+		</style>
+	</head>
+	<body>
+		<script>
+			//js内容写在下面
+		</script>
+	</body>
+</html>
+
